--- a/applications/sink/mqtt-sink/pom.xml
+++ b/applications/sink/mqtt-sink/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.9.1</version>
+            <version>${test-containers.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
