--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.springframework.cloud.stream.app</groupId>
     <artifactId>stream-applications</artifactId>
-    <version>3.0.1</version>
+    <version>3.0.2-SNAPSHOT</version>
     <name>stream-applications</name>
     <description>Functions and Infrastructure for stream applications</description>
     <packaging>pom</packaging>
