--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -253,6 +253,10 @@
                                             <groupId>org.springframework.cloud</groupId>
                                             <artifactId>spring-cloud-starter-sleuth</artifactId>
                                         </dependency>
+                                        <dependency>
+                                            <groupId>org.springframework.cloud</groupId>
+                                            <artifactId>spring-cloud-starter-config</artifactId>
+                                        </dependency>
                                     </dependencies>
                                 </maven>
                             </application>
