--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -257,6 +257,11 @@
                                             <groupId>org.springframework.cloud</groupId>
                                             <artifactId>spring-cloud-starter-config</artifactId>
                                         </dependency>
+                                        <dependency>
+                                            <groupId>io.pivotal.spring.cloud</groupId>
+                                            <artifactId>spring-cloud-services-starter-config-client</artifactId>
+                                            <version>3.2.0.RELEASE</version>
+                                        </dependency>
                                     </dependencies>
                                 </maven>
                             </application>
