--- a/functions/spring-functions-parent/pom.xml
+++ b/functions/spring-functions-parent/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<spring-boot.version>2.3.9.RELEASE</spring-boot.version>
-		<spring-cloud-function.version>3.0.13.RELEASE</spring-cloud-function.version>
+		<spring-cloud-function.version>3.0.14.BUILD-SNAPSHOT</spring-cloud-function.version>
 		<spring-cloud-fn.version>${project.version}</spring-cloud-fn.version>
 		<spring-integration-dependencies.version>5.3.6.RELEASE</spring-integration-dependencies.version>
 	</properties>
