--- a/functions/supplier/sftp-supplier/pom.xml
+++ b/functions/supplier/sftp-supplier/pom.xml
@@ -32,6 +32,11 @@
 
         <dependency>
             <groupId>org.springframework.cloud.fn</groupId>
+            <artifactId>config-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>file-common</artifactId>
             <version>${revision}</version>
         </dependency>
