--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -358,6 +358,7 @@
 				<plugins>
 					<plugin>
 						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
