--- a/stream-applications-release-train/pom.xml
+++ b/stream-applications-release-train/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.5</version>
+        <version>3.0.6-SNAPSHOT</version>
         <relativePath>../applications/stream-applications-core/pom.xml</relativePath>
     </parent>
 
@@ -19,8 +19,8 @@
     </modules>
 
     <properties>
-        <revision>2020.0.2</revision>
-        <apps.version>3.0.2</apps.version>
+        <revision>2020.0.3-SNAPSHOT</revision>
+        <apps.version>3.0.3-SNAPSHOT</apps.version>
         <apps.harbor.version>3.0.2</apps.harbor.version>
         <cdc-debezium-source.version>${apps.version}</cdc-debezium-source.version>
         <file-source.version>${apps.version}</file-source.version>
