--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -23,7 +23,7 @@
         <mockserver.version>5.10</mockserver.version>
         <spring-cloud-stream-dependencies.version>3.2.1</spring-cloud-stream-dependencies.version>
         <spring-cloud-stream.version>3.2.1</spring-cloud-stream.version>
-        <spring-cloud-dataflow-apps-generator-plugin.version>1.0.5</spring-cloud-dataflow-apps-generator-plugin.version>
+        <spring-cloud-dataflow-apps-generator-plugin.version>1.0.6-SNAPSHOT</spring-cloud-dataflow-apps-generator-plugin.version>
         <spring-cloud-dataflow-apps-docs-plugin.version>1.0.5</spring-cloud-dataflow-apps-docs-plugin.version>
         <spring-cloud-dataflow-apps-metadata-plugin.version>1.0.5</spring-cloud-dataflow-apps-metadata-plugin.version>
         <java-cfenv-boot.version>2.1.2.RELEASE</java-cfenv-boot.version>
