--- a/applications/processor/image-recognition-processor/pom.xml
+++ b/applications/processor/image-recognition-processor/pom.xml
@@ -10,9 +10,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>processor-parent</artifactId>
+        <artifactId>stream-applications-core</artifactId>
         <version>3.2.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath/>
     </parent>
 
     <dependencies>
