--- a/applications/sink/analytics-sink/pom.xml
+++ b/applications/sink/analytics-sink/pom.xml
@@ -11,9 +11,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>sink-parent</artifactId>
+        <artifactId>stream-applications-core</artifactId>
         <version>3.2.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath/>
     </parent>
 
     <dependencies>
